kubernetes/apps/observability/grafana/instance/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  hostnames:
    - grafana.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: grafana-service
          namespace: observability
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
